# fsling

./: Cargo.toml  LICENSE
src/: event_handler.rs  file_watcher.rs  filewatcher.rs  main.rs
