[package]
name = "fsling"
version = "0.0.1"
authors = ["Ellie Huxtable <e@elm.sh>"]
edition = "2018"
license = "MIT"
description = "fsling - sling files to where they need to be"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
notify = "4.0.15"
regex = "1.3.9"
ssh2 = "0.8.2"
anyhow = "1.0"
globset = "0.4.5"
